--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,94 @@
     margin: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+/* INIZIO LAYOUT */
+.row {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+/* FINE LAYOUT */
+/* INIZIO GENERALI */
+.h-100 {
+    height: 100vh;
+}
+.background {
+    background-color: rgb(178, 0, 178);
+    padding: 20px;
+}
+.col-12 {
+    background-color: white;
+}
+h2 {
+    color: white;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+.block {
+    display: block;
+}
+/* FINE GENERALI */
+/* INIZIO SEZIONE FORM */
+.ticket_form {
+    padding: 20px;
+    margin-bottom: 20px;
+    color: rgb(178, 0, 178);
+}
+.boxs {
+    display: flex;
+    width: 70%;
+    margin: auto;
+}
+.box {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: calc(100% / 3 - 50px);
+    margin: 0px 25px 20px;
+}
+.box label {
+    margin-bottom: 15px;
+}
+.box input, .box select {
+    appearance: none;
+    border-color: rgb(178, 0, 178);
+    padding: 5px 10px;
+}
+button {
+    margin: 50px 20px 0;
+    font-size: inherit;
+    color: inherit;
+    padding: 8px 20px;
+    border-radius: 10px;
+    border: 2px solid rgb(178, 0, 178);
+    font-weight: bold;
+}
+/* FINE SEZIONE FORM */
+/* INIZIO SEZIONE TICKET */
+.ticket {
+    padding: 20px;
+    text-align: left;
+}
+.ticket .dettagli_passeggero {
+    display: flex;
+}
+.ticket .passeggero {
+    width: 30%;
+    background-color: gray;
+}
+.ticket .offerta, .ticket .carrozza, .ticket .codice, .ticket .costo {
+    width: calc(70% / 4);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.ticket .passeggero, .ticket .offerta, .ticket .carrozza, .ticket .codice, .ticket .costo {
+    border-top: 2px solid gray;
+    border-bottom: 2px solid gray;
+    padding: 20px;
+    height: 150px;
+}
+/* FINE SEZIONE TICKET */
